--- a/pokemon-trainer-card/card-maker.html
+++ b/pokemon-trainer-card/card-maker.html
@@ -1,7 +1,12 @@
 <html>
 	<head>
-		<title>test</title>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<title>Card Maker</title>
+	    <link rel="stylesheet" href="../lib/css/bootstrap.min.css" />
+	    <link rel="stylesheet" href="../lib/css/bootstrap.min.css" />
+	    <link rel="stylesheet" href="../lib/css/jquery-ui.min.css" />
+		<script src="../lib/js/jquery-1.11.1.min.js"></script>
+		<script src="../lib/js/bootstrap.min.js"></script>
+		<script src="../lib/js/selectize.js"></script>
 	</head>
 	<body>
 		<div id="aaa">aaa</div>
