--- a/pokemon-trainer-card/card-maker.html
+++ b/pokemon-trainer-card/card-maker.html
@@ -2,7 +2,6 @@
 	<head>
 		<title>Card Maker</title>
 	    <link rel="stylesheet" href="../lib/css/bootstrap.min.css" />
-	    <link rel="stylesheet" href="../lib/css/bootstrap.min.css" />
 	    <link rel="stylesheet" href="../lib/css/jquery-ui.min.css" />
 		<script src="../lib/js/jquery-1.11.1.min.js"></script>
 		<script src="../lib/js/bootstrap.min.js"></script>
@@ -71,36 +70,43 @@
 						<div class="col-md-3">
 							<input type="checkbox" id="badge-08"/>
 							<label for="badge-08">
-								<p>?/?</p>
-								<img src="pic/blank-badge.png" class="img-responsive">
+								<p>Electric/Dragon</p>
+								<img src="pic/electric-dragon.png" class="img-responsive">
 							</label>
 						</div>
-						<div class="col-md-6">
-							<input type="checkbox" id="badge-09"/>
-							<label for="badge-09">
+						<div class="col-md-12">
+							<input type="checkbox" id="elite-1"/>
+							<label for="elite-1">
 								<p>Johto Elite</p>
-								<img src="pic/johto.png" class="img-responsive">
+								<img src="pic/elite-johto-crop.png" class="img-responsive">
 							</label>
 						</div>
 						<div class="col-md-6">
-							<input type="checkbox" id="badge-10"/>
-							<label for="badge-10">
-								<p>Hoenn Elite</p>
-								<img src="pic/hoenn.png" class="img-responsive">
-							</label>
-						</div>
-						<div class="col-md-6">
-							<input type="checkbox" id="badge-11"/>
-							<label for="badge-11">
-								<p>Sinnoh Elite</p>
-								<img src="pic/sinnoh.png" class="img-responsive">
-							</label>
-						</div>
-						<div class="col-md-6">
-							<input type="checkbox" id="badge-12"/>
-							<label for="badge-12">
+							<input type="checkbox" id="elite-2"/>
+							<label for="elite-2">
 								<p>Kalos Elite</p>
-								<img src="pic/kalos.png" class="img-responsive">
+								<img src="pic/elite-kalos-crop.png" class="img-responsive">
+							</label>
+						</div>
+						<div class="col-md-6">
+							<input type="checkbox" id="elite-3"/>
+							<label for="elite-3">
+								<p>Hoenn Elite</p>
+								<img src="pic/elite-hoenn-crop.png" class="img-responsive">
+							</label>
+						</div>
+						<div class="col-md-6">
+							<input type="checkbox" id="elite-4"/>
+							<label for="elite-4">
+								<p>Unova Elite</p>
+								<img src="pic/elite-unova-crop.png" class="img-responsive">
+							</label>
+						</div>
+						<div class="col-md-6">
+							<input type="checkbox" id="elite-5"/>
+							<label for="elite-5">
+								<p>Sinnoh Elite</p>
+								<img src="pic/elite-sinnoh-crop.png" class="img-responsive">
 							</label>
 						</div>
 					</div>
