--- a/pokemon-trainer-card/index.html
+++ b/pokemon-trainer-card/index.html
@@ -74,39 +74,39 @@
 								<img src="pic/electric-dragon.png" class="img-responsive">
 							</label>
 						</div>
-						<div class="col-md-12">
+						<div class="col-md-12 text-center m-b-m-120 z-2">
 							<input type="checkbox" id="elite-1"/>
 							<label for="elite-1">
 								<p>Johto Elite</p>
 								<img src="pic/elite-johto-crop.png" class="img-responsive">
 							</label>
 						</div>
-						<div class="col-md-6">
+						<div class="col-md-6 text-right m-b-m-20">
 							<input type="checkbox" id="elite-2"/>
 							<label for="elite-2">
-								<p>Kalos Elite</p>
+								<p class="text-left">Kalos Elite</p>
 								<img src="pic/elite-kalos-crop.png" class="img-responsive">
 							</label>
 						</div>
-						<div class="col-md-6">
+						<div class="col-md-6 m-b-m-20">
 							<input type="checkbox" id="elite-3"/>
 							<label for="elite-3">
-								<p>Hoenn Elite</p>
+								<p class="text-right">Hoenn Elite</p>
 								<img src="pic/elite-hoenn-crop.png" class="img-responsive">
 							</label>
 						</div>
-						<div class="col-md-6">
+						<div class="col-md-6 text-right">
 							<input type="checkbox" id="elite-4"/>
 							<label for="elite-4">
-								<p>Unova Elite</p>
 								<img src="pic/elite-unova-crop.png" class="img-responsive">
+								<p class="text-left">Unova Elite</p>
 							</label>
 						</div>
 						<div class="col-md-6">
 							<input type="checkbox" id="elite-5"/>
 							<label for="elite-5">
-								<p>Sinnoh Elite</p>
 								<img src="pic/elite-sinnoh-crop.png" class="img-responsive">
+								<p class="text-right">Sinnoh Elite</p>
 							</label>
 						</div>
 					</div>
@@ -135,6 +135,15 @@
 			});
 		</script>
 		<style>
+			.m-b-m-20 {
+				margin-bottom: -20px;
+			}
+			.m-b-m-120 {
+				margin-bottom: -120px;
+			}
+			.z-2 {
+				z-index: 2;
+			}
 			.container >.row >[class*=col-] {
 				margin-top: 20px;
 			}
