--- a/pokemon-trainer-card/card-maker.html
+++ b/pokemon-trainer-card/card-maker.html
@@ -10,6 +10,7 @@
 		<script src="../lib/js/bootstrap.min.js"></script>
 	    <script src="../lib/selectize/js/jquery.js"></script>
 	    <script src="../lib/selectize/js/selectize.js"></script>
+		<script src="../lib/js/jquery.nestable.js"></script>
 	</head>
 	<body>
 		<div class="container">
@@ -18,7 +19,28 @@
 					<div class="clearfix">card</div>
 				</div>
 				<div class="col-md-6" id="trainer">
-					<div class="clearfix">trainer</div>
+					<div class="clearfix">
+						<div id="trainer-info">
+							<div class='col-md-6'>
+								<input type="text" name="name" placeholder="Player name">
+							</div>
+							<div class='col-md-6'>
+								<input type="text" name="fc" placeholder="Friend code">
+							</div>
+							<div class="clearfix"></div>
+						</div>
+						<div id="trainer-preview"></div>
+						<div id="trainer-select">
+							<div class="col-md-6">
+								<select id="select-category">
+						        	<option value="">Select trainer category</option>
+								</select>
+							</div>
+							<div class="col-md-12">
+								<div id="div-trainer"></select>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="col-md-6" id="badge">
 					<div class="clearfix">
@@ -117,18 +139,21 @@
 				</div>
 				<div class="col-md-6" id="pokemon">
 					<div class="clearfix">
+						<div id="selected" class="col-md-12 dd">
+							<ol class="dd-list"></ol>
+						</div>
 						<div class="col-md-4">
-					        <select id="select-pokemon" class="demo-default">
+					        <select id="select-pokemon">
 					        	<option value="">Select pokemon</option>
 					        </select>
 						</div>
 						<div class="col-md-4">
-					        <select id="select-gender" class="demo-default">
+					        <select id="select-gender">
 					        	<option value="">Select gender</option>
 					        </select>
 						</div>
 						<div class="col-md-4">
-					        <select id="select-form" class="demo-default">
+					        <select id="select-form">
 					        	<option value="">Select form</option>
 					        </select>
 						</div>
