--- a/pokemon-trainer-card/card-maker.html
+++ b/pokemon-trainer-card/card-maker.html
@@ -37,11 +37,13 @@
 								</select>
 							</div>
 							<div class="col-md-12">
-								<div id="div-trainer"></select>
+								<div id="div-trainer"></div>
 							</div>
 						</div>
 					</div>
 				</div>
+			</div>
+			<div class="row">
 				<div class="col-md-6" id="badge">
 					<div class="clearfix">
 						<div class="col-md-3">
