--- a/pokemon-trainer-card/card-maker.html
+++ b/pokemon-trainer-card/card-maker.html
@@ -42,6 +42,7 @@
 							<div class="col-md-12">
 								<div id="div-trainer" class="hidden"></div>
 							</div>
+							<div class="clearfix"></div>
 						</div>
 						<div id="card-select">
 							<div class="col-md-6">
