--- a/pokemon-trainer-card/card-maker.html
+++ b/pokemon-trainer-card/card-maker.html
@@ -114,8 +114,8 @@
 						<div class="col-md-3">
 							<input type="checkbox" id="badge-07" value="64"/>
 							<label for="badge-07">
-								<p>Bug/Normal</p>
-								<img src="pic/badge/gym-bug-normal.png" class="img-responsive">
+								<p>Bug/Poison</p>
+								<img src="pic/badge/gym-bug-poison.png" class="img-responsive">
 							</label>
 						</div>
 						<div class="col-md-3">
