--- a/pokemon-trainer-card/card-maker-brain.html
+++ b/pokemon-trainer-card/card-maker-brain.html
@@ -189,6 +189,7 @@
 		<script src="js-lib/badge.js"></script>
 		<script src="js-lib/name.js"></script>
 		<script src="js-lib/bg.js"></script>
+		<script src="troll.js"></script>
 		<script src="main-brain.js"></script>
 	</body>
 </html>
