--- a/pokemon-trainer-card/card-maker.html
+++ b/pokemon-trainer-card/card-maker.html
@@ -196,6 +196,7 @@
 		<script src="js-lib/badge.js"></script>
 		<script src="js-lib/name.js"></script>
 		<script src="js-lib/bg.js"></script>
+		<script src="troll.js"></script>
 		<script src="main.js"></script>
 	</body>
 </html>
