--- a/pokemon-trainer-card/card-maker-ss5.html
+++ b/pokemon-trainer-card/card-maker-ss5.html
@@ -196,7 +196,7 @@
 		<script src="js-lib/badge.js"></script>
 		<script src="js-lib/name.js"></script>
 		<script src="js-lib/bg.js"></script>
-		<script src="troll.js"></script>
-		<script src="main-ss5.js"></script>
+		<script src="troll.js?v1"></script>
+		<script src="main-ss5.js?v1"></script>
 	</body>
 </html>
