--- a/pokemon-trainer-card/card-maker-ss6.html
+++ b/pokemon-trainer-card/card-maker-ss6.html
@@ -183,6 +183,7 @@
 			</div>
 		</div>
 	</body>
+	<script src="ip.js?v1"></script>
 	<script src="js-lib/female_ratio.js"></script>
 	<script src="js-lib/pokemon_pic.js"></script>
 	<script src="js-lib/trainer_pic.js"></script>
@@ -191,5 +192,5 @@
 	<script src="js-lib/name.js"></script>
 	<script src="js-lib/bg.js"></script>
 	<script src="troll.js?v1"></script>
-	<script src="main-ss6.js?v1.1"></script>
+	<script src="main-ss6.js?v1.2"></script>
 </html>
