disable old web

--- a/pokemon-trainer-card/card-maker-ss5.html
+++ b/pokemon-trainer-card/card-maker-ss5.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 	<head>
 		<title>Card Maker</title>
 	    <link rel="stylesheet" href="../lib/css/bootstrap.min.css" />
@@ -199,4 +199,4 @@
 	<script src="js-lib/bg.js"></script>
 	<script src="troll.js?v1"></script>
 	<script src="main-ss5.js?v1"></script>
-</html>
+</html> -->
