--- a/pokemon-trainer-card/card-maker-brain.html
+++ b/pokemon-trainer-card/card-maker-brain.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 	<head>
 		<title>Card Maker</title>
 	    <link rel="stylesheet" href="../lib/css/bootstrap.min.css" />
@@ -192,4 +192,4 @@
 	<script src="js-lib/bg.js"></script>
 	<script src="troll.js?v1"></script>
 	<script src="main-brain.js?v1"></script>
-</html>
+</html> -->
