--- a/pokemon-trainer-card/card-maker-ss7.html
+++ b/pokemon-trainer-card/card-maker-ss7.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 	<head>
 		<title>Card Maker</title>
 	    <link rel="stylesheet" href="../lib/css/bootstrap.min.css" />
@@ -191,4 +191,4 @@
 	<script src="js-lib/name.js"></script>
 	<script src="js-lib/bg.js"></script>
 	<script src="main-ss7.js?v1.0"></script>
-</html>
+</html> -->
