--- a/pokemon-trainer-card/card-maker-ss8.html
+++ b/pokemon-trainer-card/card-maker-ss8.html
@@ -73,63 +73,63 @@
 							<input type="checkbox" id="badge-01" value="1"/>
 							<label for="badge-01">
 								<p>Bug-Psychic</p>
-								<img src="pic/badgeSS8/bug-psychic.png" class="">
+								<img src="pic/badgeSS8/bug-psychic.png">
 							</label>
 						</div>
 						<div class="col-md-4 text-center">
 							<input type="checkbox" id="badge-02" value="2"/>
 							<label for="badge-02">
 								<p>Dark-Poison</p>
-								<img src="pic/badgeSS8/dark-poison.png" class="">
+								<img src="pic/badgeSS8/dark-poison.png">
 							</label>
 						</div>
 						<div class="col-md-4 text-center">
 							<input type="checkbox" id="badge-03" value="4"/>
 							<label for="badge-03">
 								<p>Dragon-Electric</p>
-								<img src="pic/badgeSS8/dragon-electric.png" class="">
+								<img src="pic/badgeSS8/dragon-electric.png">
 							</label>
 						</div>
 						<div class="col-md-4 text-center">
 							<input type="checkbox" id="badge-04" value="8"/>
 							<label for="badge-04">
 								<p>Fairy-Rock</p>
-								<img src="pic/badgeSS8/fairy-rock.png" class="">
+								<img src="pic/badgeSS8/fairy-rock.png">
 							</label>
 						</div>
 						<div class="col-md-4 text-center">
 							<input type="checkbox" id="badge-05" value="16"/>
 							<label for="badge-05">
 								<p>Fighting-Ghost</p>
-								<img src="pic/badgeSS8/fighting-ghost.png" class="">
+								<img src="pic/badgeSS8/fighting-ghost.png">
 							</label>
 						</div>
 						<div class="col-md-4 text-center">
 							<input type="checkbox" id="badge-06" value="32"/>
 							<label for="badge-06">
 								<p>Fire-Grass</p>
-								<img src="pic/badgeSS8/fire-grass.png" class="">
+								<img src="pic/badgeSS8/fire-grass.png">
 							</label>
 						</div>
 						<div class="col-md-4 text-center">
 							<input type="checkbox" id="badge-07" value="64"/>
 							<label for="badge-07">
 								<p>Flying-Ice</p>
-								<img src="pic/badgeSS8/flying-ice.png" class="">
+								<img src="pic/badgeSS8/flying-ice.png">
 							</label>
 						</div>
 						<div class="col-md-4 text-center">
 							<input type="checkbox" id="badge-08" value="128"/>
 							<label for="badge-08">
 								<p>Ground-Water</p>
-								<img src="pic/badgeSS8/ground-water.png" class="">
+								<img src="pic/badgeSS8/ground-water.png">
 							</label>
 						</div>
 						<div class="col-md-4 text-center">
 							<input type="checkbox" id="badge-09" value="256"/>
 							<label for="badge-09">
 								<p>Normal-Steel</p>
-								<img src="pic/badgeSS8/normal-steel.png" class="">
+								<img src="pic/badgeSS8/normal-steel.png">
 							</label>
 						</div>
 					</div>
