--- a/pokemon-trainer-card/card-maker-ss7s.html
+++ b/pokemon-trainer-card/card-maker-ss7s.html
@@ -73,63 +73,63 @@
 							<input type="checkbox" id="badge-01" value="1"/>
 							<label for="badge-01">
 								<p>Bug-Psychic</p>
-								<img src="pic/badgeSS8/bug-psychic.png">
+								<img src="pic/badgeSS7s/bug-psychic.png">
 							</label>
 						</div>
 						<div class="col-md-4 text-center">
 							<input type="checkbox" id="badge-02" value="2"/>
 							<label for="badge-02">
 								<p>Dark-Poison</p>
-								<img src="pic/badgeSS8/dark-poison.png">
+								<img src="pic/badgeSS7s/dark-poison.png">
 							</label>
 						</div>
 						<div class="col-md-4 text-center">
 							<input type="checkbox" id="badge-03" value="4"/>
 							<label for="badge-03">
 								<p>Dragon-Electric</p>
-								<img src="pic/badgeSS8/dragon-electric.png">
+								<img src="pic/badgeSS7s/dragon-electric.png">
 							</label>
 						</div>
 						<div class="col-md-4 text-center">
 							<input type="checkbox" id="badge-04" value="8"/>
 							<label for="badge-04">
 								<p>Fairy-Rock</p>
-								<img src="pic/badgeSS8/fairy-rock.png">
+								<img src="pic/badgeSS7s/fairy-rock.png">
 							</label>
 						</div>
 						<div class="col-md-4 text-center">
 							<input type="checkbox" id="badge-05" value="16"/>
 							<label for="badge-05">
 								<p>Fighting-Ghost</p>
-								<img src="pic/badgeSS8/fighting-ghost.png">
+								<img src="pic/badgeSS7s/fighting-ghost.png">
 							</label>
 						</div>
 						<div class="col-md-4 text-center">
 							<input type="checkbox" id="badge-06" value="32"/>
 							<label for="badge-06">
 								<p>Fire-Grass</p>
-								<img src="pic/badgeSS8/fire-grass.png">
+								<img src="pic/badgeSS7s/fire-grass.png">
 							</label>
 						</div>
 						<div class="col-md-4 text-center">
 							<input type="checkbox" id="badge-07" value="64"/>
 							<label for="badge-07">
 								<p>Flying-Ice</p>
-								<img src="pic/badgeSS8/flying-ice.png">
+								<img src="pic/badgeSS7s/flying-ice.png">
 							</label>
 						</div>
 						<div class="col-md-4 text-center">
 							<input type="checkbox" id="badge-08" value="128"/>
 							<label for="badge-08">
 								<p>Ground-Water</p>
-								<img src="pic/badgeSS8/ground-water.png">
+								<img src="pic/badgeSS7s/ground-water.png">
 							</label>
 						</div>
 						<div class="col-md-4 text-center">
 							<input type="checkbox" id="badge-09" value="256"/>
 							<label for="badge-09">
 								<p>Normal-Steel</p>
-								<img src="pic/badgeSS8/normal-steel.png">
+								<img src="pic/badgeSS7s/normal-steel.png">
 							</label>
 						</div>
 					</div>
@@ -169,5 +169,5 @@
 	<script src="js-lib/badge.js?v1"></script>
 	<script src="js-lib/name.js"></script>
 	<script src="js-lib/bg.js"></script>
-	<script src="main-ss8.js?v1.0"></script>
+	<script src="main-ss7s.js?v1.0"></script>
 </html>
